bugfix: - fix visibility of icons in orgstruct control while active light theme

--- a/idocs-share/source/web/themes/citeckTheme/presentation.css
+++ b/idocs-share/source/web/themes/citeckTheme/presentation.css
@@ -4289,3 +4289,9 @@ div#HEADER_USER_STATUS {
     position: static;
   }
 }
+
+
+/* dynamic-tree */
+.yui-skin-citeckTheme .dynamic-tree-picker .dynamic-tree-list .item-buttons {
+  right: -25px;
+}
